--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div class="modalinfo">
 <div id="about">
 <h2>What is Poetry Club?</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+<p>This section is currently a work in progress.</p>
 </div>
 </div>
 </div>
@@ -140,15 +140,12 @@
 <div id="title">EHS Poetry Club</div>
 <nav>
 <a href="http://www.ecusd7.org/ehs/">Return to EHS</a>
-<a href="/">Return to Index</a>
+<a href="http://dmerc66.wix.com/main">Return to Index</a>
 </nav>
 </header>
 
-
-<!--- Slider of Selected Poems --->
-
+<!-- Main -->
 <main>
-
 <!-- Panels --->
 <div class="panels">
 <div class="panel" id="panel">
@@ -158,8 +155,6 @@ About
 <section id="about2">
 <!-- Clone -->
 </section>
-
-
 
 
 <div class="panel" id="panel2">
@@ -172,7 +167,6 @@ Links & Contact
 <!-- Clone -->
 </table>
 </section>
-
 
 
 <div class="panel" id="panel3">
@@ -188,7 +182,7 @@ Calendar
 
 </div>
 
-<!--- Slider -->
+<!-- Slider -->
 
 <div class="slider">
 <div class="arrow-left"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-left-128.png" width="90%"/></div>
@@ -223,9 +217,9 @@ Calendar
 
 <div class="arrow-right"><img src="http://www.hamiltonkent.com/media/2428/icon-ios7-arrow-right-128.png" width="90%"/></div>
 </div>
-
 </main>
 
+<!-- Footer -->
 <footer>
 <p><a href="/">
 <svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="50px" height="50px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
@@ -243,9 +237,7 @@ Calendar
 <p>Website by Robin Luo</p>
 <p>(2016)</p>
 </footer>
-
 </div>
-
 </body>
 
 </html>
