--- a/index.html
+++ b/index.html
@@ -194,23 +194,23 @@ Calendar
 </div>
 
 <div class="slide">  
-<p>Poems!</p>
+<p>Slide Two</p>
 </div>
 
 <div class="slide">
-<p>slide3</p>
+<p>Slide Three</p>
 </div>
 
 <div class="slide">
-<iframe width="100%" height="99%" src="https://www.youtube.com/embed/dh5wSt-hfL0" frameborder="0" allowfullscreen></iframe>
+<p>Slide Four</p>
 </div>
 
 <div class="slide">
-<p>slide5</p>
+<p>Slide Five</p>
 </div>
 
 <div class="slide">
-<iframe width="100%" height="99%" src="https://www.youtube.com/embed/WkNp56UZax4" frameborder="0" allowfullscreen></iframe>
+<p>Slide Six</p>
 </div>
 
 </div>
