--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 	</tr>
 </table>
 <ul>
-	<li><a href="http://www.poets.org">Academy of American Poets</a> </li>
-	<li><a href="http://www.poetryfoundation.org">Poetry Foundation</a> </li>
+	<li><a href="http://www.poets.org">Academy of American Poets</a></li>
+	<li><a href="http://www.poetryfoundation.org">Poetry Foundation</a></li>
 	<li><a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry on Youtube</a></li>
 </ul>
 </div>
@@ -215,7 +215,7 @@ Calendar
 
 </div>
 
-<div class="arrow-right"><img src="http://www.hamiltonkent.com/media/2428/icon-ios7-arrow-right-128.png" width="90%"/></div>
+<div class="arrow-right"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-right-128.png" width="90%"/></div>
 </div>
 </main>
 
