--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="modal" id="modal">
 <div id="modalcontainer">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close-circled.svg" width="10px" /></div>
+<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close-circled.svg" width="25px" /></div>
 <div class="modalinfo">
 <div id="about">
 <h2>What is Poetry Club?</h2>
@@ -26,7 +26,7 @@
 
 <div class="modal" id="modal2">
 <div id="modalcontainer2">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close-circled.svg" width="10px" /></div>
+<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close-circled.svg" width="25px" /></div>
 <div class="modalinfo">
 <h2>Links & Contact</h2>
 <table id="contact">
@@ -36,8 +36,8 @@
 	</tr>
 </table>
 <ul>
-	<li><a href="http://www.poets.org">Academy of American Poets</a></li>
-	<li><a href="http://www.poetryfoundation.org">Poetry Foundation</a></li>
+	<li><a href="https://www.poets.org">Academy of American Poets</a></li>
+	<li><a href="https://www.poetryfoundation.org">Poetry Foundation</a></li>
 	<li><a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry on Youtube</a></li>
 </ul>
 </div>
@@ -46,7 +46,7 @@
 
 <div class="modal" id="modal3">
 <div id="modalcontainer3">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close-circled.svg" width="10px" /></div>
+<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close-circled.svg" width="25px" /></div>
 <div class="modalinfo">
 <table id="calendar">
 	<tr id = "month1">
