--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <title>EHS Poetry Club</title>
-<meta name=viewport content="width=700, initial-scale=0.45, maximum-scale=1, user-scalable=yes">
+<meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT|Source+Sans+Pro" rel="stylesheet">
 <link rel="stylesheet" href="poetryclub.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
