--- a/index.html
+++ b/index.html
@@ -236,6 +236,8 @@ Calendar
 <p>Sponsored by Mrs. Mercer</p>
 <p>Website by Robin Luo</p>
 <p>(2016)</p>
+<!-- This link only shows up on mobile -->
+<p><a href="http://www.ecusd7.org/ehs/">Return to EHS Homepage</a></p>
 </footer>
 </div>
 </body>
