--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <div class="modal" id="modal">
 <div id="modalcontainer">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="20px" /></div>
+<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
 <div class="modalinfo">
 <div id="about">
 <h2>What is Poetry Club?</h2>
@@ -26,13 +26,13 @@
 
 <div class="modal" id="modal2">
 <div id="modalcontainer2">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="20px" /></div>
+<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
 <div class="modalinfo">
 <h2>Links & Contact</h2>
 <table id="contact">
 	<tr id="contactmain">
 		<td>Email</td> 
-		<td><a href="mailto:ehspoetryclub@gmail.com">ehspoetryclub@gmail.com</a></td> <!-- President Contact Info -->
+		<td><a href="mailto:ehspoetryclub@gmail.com">ehspoetryclub@gmail.com</a></td> 
 	</tr>
 </table>
 <ul>
@@ -46,7 +46,7 @@
 
 <div class="modal" id="modal3">
 <div id="modalcontainer3">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="20px" /></div>
+<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
 <div class="modalinfo">
 <table id="calendar">
 	<tr id = "month1">
