--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@ Calendar
 
 <div id="slides">
 <div class="slide active-slide">
-<p><h1>Selected Poems</h1>
-<h2>Curated by the Poetry Club</h2>
+<h2>Selected Poems</h2>
+<h3 style="text-transform:uppercase;letter-spacing:1px;">Curated by the Poetry Club</h3>
 </div>
 
 <div class="slide">  
