--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@ Calendar
 <p>Website by Robin Luo</p>
 <p>(2016)</p>
 <!-- This link only shows up on mobile -->
-<p style="display:block;"><a href="http://www.ecusd7.org/ehs/">Return to EHS Homepage</a></p>
+<span><a href="http://www.ecusd7.org/ehs/">Return to EHS Homepage</a></span>
 </footer>
 </div>
 </body>
