--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>EHS Poetry Club</title>
+<link rel="shortcut icon" href="https://raw.githubusercontent.com/ehspoetryclub/ehspoetryclub.github.io/master/favicon.ico" type="image/x-icon" />
 <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
 <link href="https://fonts.googleapis.com/css?family=Old+Standard+TT|Source+Sans+Pro" rel="stylesheet">
 <link rel="stylesheet" href="poetryclub.css" />
