--- a/index.html
+++ b/index.html
@@ -54,22 +54,19 @@
 		<td>
 			<h2>August</h2>
 				<ul>
-				<li>Day</li>
-				<li>Day</li>
+				<li>25th: First Officer Meeting</li>
 				</ul>
 		</td>
 		<td>
 			<h2>September</h2>
 				<ul>
+				<li>1st: First Poetry Club Meeting</li>
 				<li>22th: No Meeting</li>
-				<li>Day</li>
 				</ul>
 		</td>
 		<td>
 			<h2>October</h2>
 				<ul>
-				<li>Day</li>
-				<li>Day</li>
 				</ul>
 		</td>
 	</tr>
@@ -83,15 +80,12 @@
 		</td>
 		<td><h2>December</h2>
 				<ul>
-				<li>Day</li>
-				<li>Day</li>
 				</ul>
 		</td>
 		<td>
 			<h2>January</h2>
 				<ul>
 				<li>26th: No Meeting</li>
-				<li>Day</li>
 				</ul>
 		</td>
 	</tr>
@@ -99,22 +93,18 @@
 		<td>
 			<h2>February</h2>
 				<ul>
-				<li>Day</li>
-				<li>Day</li>
 				</ul>
 		</td>
 		<td>
 			<h2>March</h2>
 				<ul>
 				<li>16th: No Meeting</li>
-				<li>Day</li>
 				</ul>
 		</td>
 		<td>
 			<h2>April</h2>
 				<ul>
 				<li>20th: No Meeting</li>
-				<li>Day</li>
 				</ul>
 		</td>
 	</tr>
@@ -123,7 +113,6 @@
 			<h2>May</h2>
 				<ul>
 				<li>11th: No Meeting</li>
-				<li>Day</li>
 				</ul>
 		</td>
 	</tr>
