--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 				</ul>
 		</td>
 		<td>
-			<h2>October</h2>
+			<!-- <h2>October</h2> -->
 				<ul>
 				</ul>
 		</td>
@@ -78,7 +78,8 @@
 				<li>17th: No Meeting</li>
 				</ul>
 		</td>
-		<td><h2>December</h2>
+		<td>
+			<!--<h2>December</h2>-->
 				<ul>
 				</ul>
 		</td>
@@ -91,7 +92,7 @@
 	</tr>
 	<tr id="month3">
 		<td>
-			<h2>February</h2>
+			<!--<h2>February</h2>-->
 				<ul>
 				</ul>
 		</td>
