--- a/index.html
+++ b/index.html
@@ -51,19 +51,13 @@
 <div class="modalinfo">
 <table id="calendar">
 	<tr id = "month1">
-		<td>
-			<h2>August</h2>
-				<ul>
-				<li>25th: First Officer Meeting</li>
-				</ul>
-		</td>
+		<td><h2>August</h2></td>
+		<td>25th: First Officers Meeting</td>
 		<td>
 			<h2>September</h2>
-				<ul>
-				<li>1st: First Poetry Club Meeting</li>
-				<li>22th: No Meeting</li>
-				</ul>
-		</td>
+			
+		<td>1st: First Poetry Club Meeting <br />
+		22th: No Meeting</td>
 	</tr>
 	<tr id="month2">
 		<td>
