--- a/index.html
+++ b/index.html
@@ -53,48 +53,29 @@
 	<tr id = "month1">
 		<td><h2>August</h2></td>
 		<td>25th: First Officers Meeting</td>
-		<td>
-			<h2>September</h2>
-			
+		<td><h2>September</h2></td>
 		<td>1st: First Poetry Club Meeting <br />
 		22th: No Meeting</td>
 	</tr>
 	<tr id="month2">
-		<td>
-			<h2>November</h2>
-				<ul>
-				<li>3rd: Poetry Slam</li>
-				<li>17th: No Meeting</li>
-				</ul>
+		<td><h2>November</h2></td>
+		<td>3rd: Poetry Slam<br />
+		17th: No Meeting</td>
 		</td>
-		<td>
-			<h2>January</h2>
-				<ul>
-				<li>26th: No Meeting</li>
-				</ul>
-		</td>
+		
+		<td><h2>January</h2></td>
+		<td>26th: No Meeting</td>
 	</tr>
 	<tr id="month3">
-		<td>
-			<h2>March</h2>
-				<ul>
-				<li>16th: No Meeting</li>
-				</ul>
-		</td>
-		<td>
-			<h2>April</h2>
-				<ul>
-				<li>20th: No Meeting</li>
-				</ul>
-		</td>
+		<td><h2>March</h2></td>
+	 	<td>16th: No Meeting</td>
+		
+		<td><h2>April</h2></td>
+		<td>20th: No Meeting</td>
 	</tr>
 	<tr id="month4">
-		<td>
-			<h2>May</h2>
-				<ul>
-				<li>11th: No Meeting</li>
-				</ul>
-		</td>
+		<td><h2>May</h2></td>
+		<td>11th: No Meeting</td>
 	</tr>
 </table>
 </div>
