--- a/index.html
+++ b/index.html
@@ -50,9 +50,12 @@
 <div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
 <div class="modalinfo">
 <table id="calendar">
-	<tr id = "month1">
+	<div id = "month1">
+	<tr>
 		<td><h2>August</h2></td>
 		<td>25th: First Officers Meeting</td>
+	</tr>
+	<tr>
 		<td><h2>September</h2></td>
 		<td>1st: First Poetry Club Meeting <br />
 		22th: No Meeting</td>
