--- a/index.html
+++ b/index.html
@@ -52,31 +52,31 @@
 <table id="calendar">
 	<tr id = "month1">
 		<td><h2>August</h2></td>
-		<td>25th: First Officers Meeting</td>
+		<td><span>25th: First Officers Meeting</span></td>
 		
 		<td><h2>September</h2></td>
-		<td>1st: First Poetry Club Meeting <br />
-		22th: No Meeting</td>
+		<td><span>1st: First Poetry Club Meeting<br />
+		22th: No Meeting</span></td>
 	</tr>
 	<tr id="month2">
 		<td><h2>November</h2></td>
-		<td>3rd: Poetry Slam<br />
-		17th: No Meeting</td>
+		<td><span>3rd: Poetry Slam<br />
+		17th: No Meeting</span></td>
 		</td>
 		
 		<td><h2>January</h2></td>
-		<td>26th: No Meeting</td>
+		<td><span>26th: No Meeting</span></td>
 	</tr>
 	<tr id="month3">
 		<td><h2>March</h2></td>
-	 	<td>16th: No Meeting</td>
+	 	<td><span>16th: No Meeting</span></td>
 		
 		<td><h2>April</h2></td>
-		<td>20th: No Meeting</td>
+		<td><span>20th: No Meeting</span></td>
 	</tr>
 	<tr id="month4">
 		<td><h2>May</h2></td>
-		<td>11th: No Meeting</td>
+		<td><span>11th: No Meeting</span></td>
 	</tr>
 </table>
 </div>
