--- a/index.html
+++ b/index.html
@@ -50,12 +50,11 @@
 <div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
 <div class="modalinfo">
 <table id="calendar">
-	<div id = "month1">
-	<tr>
+	<tr class="month1">
 		<td><h2>August</h2></td>
 		<td><span>25th: First Officers Meeting</span></td>
 	</tr>
-	<tr>
+	<tr class="month1">
 		<td><h2>September</h2></td>
 		<td><span>1st: First Poetry Club Meeting<br />
 		22th: No Meeting</span></td>
