--- a/index.html
+++ b/index.html
@@ -60,23 +60,25 @@
 		22th: No Meeting</span></td>
 	</tr>
 	</div>
-	<tr id="month2">
+	<tr class="month2">
 		<td><h2>November</h2></td>
 		<td><span>3rd: Poetry Slam<br />
 		17th: No Meeting</span></td>
 		</td>
-		
+	</tr>
+	<tr class="month2">
 		<td><h2>January</h2></td>
 		<td><span>26th: No Meeting</span></td>
 	</tr>
-	<tr id="month3">
+	<tr class="month3">
 		<td><h2>March</h2></td>
 	 	<td><span>16th: No Meeting</span></td>
-		
+	</tr>
+	<tr class="month3">
 		<td><h2>April</h2></td>
 		<td><span>20th: No Meeting</span></td>
 	</tr>
-	<tr id="month4">
+	<tr class="month4">
 		<td><h2>May</h2></td>
 		<td><span>11th: No Meeting</span></td>
 	</tr>
