--- a/index.html
+++ b/index.html
@@ -52,35 +52,87 @@
 <table id="calendar">
 	<tr class="month1">
 		<td><h2>August</h2></td>
-		<td><span>25th: First Officers Meeting</span></td>
+		<td>
+			<span>
+				25th: First Officers Meeting
+			</span>
+		</td>
 	</tr>
 	<tr class="month1">
 		<td><h2>September</h2></td>
-		<td><span>1st: First Poetry Club Meeting<br />
-		22th: No Meeting</span></td>
+		<td>
+			<span>
+				1st: First Poetry Club Meeting<br />
+				22th: No Meeting
+			</span>
+		</td>
+	</tr>
+	<tr class="month1">
+		<td><h2>October</h2></td>
+		<td>
+			<span>
+				No Events
+			</span>
+		</td>
 	</tr>
 	</div>
 	<tr class="month2">
 		<td><h2>November</h2></td>
-		<td><span>3rd: Poetry Slam<br />
-		17th: No Meeting</span></td>
+		<td>
+			<span>
+				3rd: Poetry Slam<br />
+				17th: No Meeting
+			</span>
+		</td>
+		</td>
+	</tr>
+	<tr class="month2">
+		<td><h2>December</h2></td>
+		<td>
+			<span>
+				No Events
+			</span>
 		</td>
 	</tr>
 	<tr class="month2">
 		<td><h2>January</h2></td>
-		<td><span>26th: No Meeting</span></td>
+		<td>
+			<span>
+				26th: No Meeting
+			</span>
+		</td>
+	</tr>
+	<tr class="month3">
+		<td><h2>February</h2></td>
+		<td>
+			<span>
+				No Events
+			</span>
+		</td>
 	</tr>
 	<tr class="month3">
 		<td><h2>March</h2></td>
-	 	<td><span>16th: No Meeting</span></td>
+	 	<td>
+	 		<span>
+	 			16th: No Meeting
+	 		</span>
+	 	</td>
 	</tr>
 	<tr class="month3">
 		<td><h2>April</h2></td>
-		<td><span>20th: No Meeting</span></td>
+		<td>
+			<span>
+				20th: No Meeting
+			</span>
+		</td>
 	</tr>
 	<tr class="month4">
 		<td><h2>May</h2></td>
-		<td><span>11th: No Meeting</span></td>
+		<td>
+			<span>
+				11th: No Meeting
+			</span>
+		</td>
 	</tr>
 </table>
 </div>
