--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 	<li><a href="https://www.poetryfoundation.org">Poetry Foundation</a></li>
 	<li><a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry on Youtube</a></li>
 </ul>
+<h4>Submit your poems to the <a href="https://ehslitmag.github.io">EHS Lit Mag</a>!</h4>
 </div>
 </div>
 </div>
@@ -199,7 +200,7 @@ Calendar
 <div class="slide active-slide">
 <p>
 <h2>Selected Poems</h2>
-<h3 style="text-transform:uppercase;letter-spacing:2px;">Curated by the Poetry Club</h3>
+<span style="text-transform:uppercase;font-size:1em;letter-spacing:2px;">Curated by the Poetry Club</span>
 </p>
 </div>
 
