--- a/index.html
+++ b/index.html
@@ -199,13 +199,32 @@ Calendar
 <div id="slides">
 <div class="slide active-slide">
 <p>
-<h2>Selected Poems</h2>
-<span style="text-transform:uppercase;font-size:1em;letter-spacing:2px;">Curated by the Poetry Club</span>
+<h1>Selected Poems</h1>
+<span style="text-transform:uppercase;font-size:1em;letter-spacing:2px;font-weight:bold">Curated by the Poetry Club</span>
 </p>
 </div>
 
+<!-- To have a sentence go to the next line, use '<br />'. This means to break the word to the next line. 
+To create a paragraph, use '<p>' at the beginning and '</p>' at the end--> 
+
 <div class="slide">  
-<p>Slide Two</p>
+<h2>The Rain is A Handsome Animal</h2>
+<p>e.e. cummings</p>
+<p>
+Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
+Along the river trees are letting go scarcely and silently wisps,parcels<br />
+of incense,which drop floatingly through a vista of talking moving people;<br />
+timidly which caress hats and shoulders,wrists and dresses;which unspeak-<br />
+ingly alight upon the laughter of men and children,girls and soldiers.<br />
+In twilight these ridiculous and exquisite things descendingly move among<br />
+through twilight to The Gingerbread Fair.   I am alive,I go along too, I <br />
+slowly go up the vista among the hats and soldiers,among the smiles and <br />
+neckties,the kisses and old men,wrists and laughter.   We all together ir-<br />
+revocably are moving,are moving slowly and gaily moving.  Intricately the<br />
+shoulders of us and our hats timidly are touched by a million absurd hint-<br />
+ing things;by wisps and by women and by laughter and by forever;while,<br />
+upon our minds,fasten beautifully and close the warm tentacles of evening.
+</p>
 </div>
 
 <div class="slide">
