--- a/index.html
+++ b/index.html
@@ -204,8 +204,13 @@ Calendar
 </p>
 </div>
 
-<!-- To have a sentence go to the next line, use '<br />'. This means to break the word to the next line. 
-To create a paragraph, use '<p>' at the beginning and '</p>' at the end--> 
+<!-- 
+IF YOU ARE TYPING:
+To write a title, use '<h2>' at the beginning of the first word and '</h2>' at the end of the last word.
+To write the poet's name, use '<p>' at the beginning of the name and '</p>' at the end of the name. THIS **MUST** BE AFTER THE TITLE!!
+To have a sentence go to the next line, use '<br />' after sentence. This means to break the word to the next line. 
+To create a paragraph, use '<p>' at the beginning of the first word and '</p>' at the end of the last word.
+--> 
 
 <div class="slide">  
 <h2>The Rain is A Handsome Animal</h2>
@@ -214,15 +219,15 @@ To create a paragraph, use '<p>' at the beginning and '</p>' at the end-->
 Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
 Along the river trees are letting go scarcely and silently wisps,parcels<br />
 of incense,which drop floatingly through a vista of talking moving people;<br />
-timidly which caress hats and shoulders,wrists and dresses;which unspeak-<br />
-ingly alight upon the laughter of men and children,girls and soldiers.<br />
+timidly which caress hats and shoulders,wrists and dresses;which unspeakingly<br />
+alight upon the laughter of men and children,girls and soldiers.<br />
 In twilight these ridiculous and exquisite things descendingly move among<br />
 through twilight to The Gingerbread Fair.   I am alive,I go along too, I <br />
 slowly go up the vista among the hats and soldiers,among the smiles and <br />
-neckties,the kisses and old men,wrists and laughter.   We all together ir-<br />
-revocably are moving,are moving slowly and gaily moving.  Intricately the<br />
-shoulders of us and our hats timidly are touched by a million absurd hint-<br />
-ing things;by wisps and by women and by laughter and by forever;while,<br />
+neckties,the kisses and old men,wrists and laughter.   We all together irrevocably<br />
+are moving,are moving slowly and gaily moving.  Intricately the<br />
+shoulders of us and our hats timidly are touched by a million absurd<br />
+hinting things;by wisps and by women and by laughter and by forever;while,<br />
 upon our minds,fasten beautifully and close the warm tentacles of evening.
 </p>
 </div>
