--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@ Calendar
 <!-- 
 IF YOU ARE TYPING:
 To write a title, use '<h2>' at the beginning of the first word and '</h2>' at the end of the last word.
-To write the poet's name, use '<p style="#eee;">' at the beginning of the name and '</p>' at the end of the name. THIS **MUST** BE AFTER THE TITLE!!
+To write the poet's name, use '<p style="#d5d5d5;">' at the beginning of the name and '</p>' at the end of the name. 
 To have a sentence go to the next line, use '<br />' after sentence. This means to break the word to the next line. 
 To create a paragraph, use '<p>' at the beginning of the first word and '</p>' at the end of the last word.
 --> 
 
 <div class="slide">  
 <h2>The Rain is A Handsome Animal</h2>
-<p style="color:#eee;">e.e. cummings</p>
+<p style="color:#d5d5d5;">e.e. cummings</p>
 <p>
 Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
 Along the river trees are letting go scarcely and silently wisps,parcels<br />
