--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@ Calendar
 <div id="slides">
 <div class="slide active-slide">
 <p>
-<h1>Selected Poems</h1>
-<span style="text-transform:uppercase;font-size:1em;letter-spacing:2px;font-weight:bold">Curated by the Poetry Club</span>
+<h1>Poems</h1>
+<span style="text-transform:uppercase;font-size:1em;letter-spacing:2px;font-weight:bold">Curated and By the Poetry Club</span>
 </p>
 </div>
 
@@ -216,24 +216,66 @@ To create a paragraph, use '<p>' at the beginning of the first word and '</p>' a
 <h2>The Rain is A Handsome Animal</h2>
 <p style="color:#d5d5d5;">e.e. cummings</p>
 <p>
-Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
-Along the river trees are letting go scarcely and silently wisps,parcels<br />
-of incense,which drop floatingly through a vista of talking moving people;<br />
-timidly which caress hats and shoulders,wrists and dresses;which unspeakingly<br />
-alight upon the laughter of men and children,girls and soldiers.<br />
-In twilight these ridiculous and exquisite things descendingly move among<br />
-through twilight to The Gingerbread Fair.   I am alive,I go along too, I <br />
-slowly go up the vista among the hats and soldiers,among the smiles and <br />
-neckties,the kisses and old men,wrists and laughter.   We all together irrevocably<br />
-are moving,are moving slowly and gaily moving.  Intricately the<br />
-shoulders of us and our hats timidly are touched by a million absurd<br />
-hinting things;by wisps and by women and by laughter and by forever;while,<br />
-upon our minds,fasten beautifully and close the warm tentacles of evening.
+	Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
+	Along the river trees are letting go scarcely and silently wisps,parcels<br />
+	of incense,which drop floatingly through a vista of talking moving people;<br />
+	timidly which caress hats and shoulders,wrists and dresses;which unspeakingly<br />
+	alight upon the laughter of men and children,girls and soldiers.<br />
+	In twilight these ridiculous and exquisite things descendingly move among<br />
+	through twilight to The Gingerbread Fair.   I am alive,I go along too, I <br />
+	slowly go up the vista among the hats and soldiers,among the smiles and <br />
+	neckties,the kisses and old men,wrists and laughter.   We all together irrevocably<br />
+	are moving,are moving slowly and gaily moving.  Intricately the<br />
+	shoulders of us and our hats timidly are touched by a million absurd<br />
+	hinting things;by wisps and by women and by laughter and by forever;while,<br />
+	upon our minds,fasten beautifully and close the warm tentacles of evening.
 </p>
 </div>
 
 <div class="slide">
-<p>Slide Three</p>
+<p style="color:#d5d5d5;">Devonte Fuller*</p>
+<p>
+	Can I let you into my world<br/>
+	So you can see all that I see?<br />
+	So that you could have a better understanding of me?
+</p>
+<p>
+	I only want to show you<br />
+	How I think and feel inside<br />
+	So I know that when I fall apart<br />
+	You'll fill me up with pride
+</p>
+<p>
+	I want to pour my heart and soul<br />
+	Into my every word<br />
+	Without the fear of being<br />
+	misjudged, rejected, and <br />
+	obscured.
+</p>
+<p>
+	I want to give you everything<br />
+	Now is that such a sin?<br />
+	I promise I'll conceal my demons,<br />
+	Hide them deep within.<br />
+</p>
+<p>
+	Are you willing to do the same for me?<br />
+	If so I won't complain<br />
+	I only want to live my life<br />
+	void of social strain<br />
+</p>
+<p>
+	Let me see into your world<br />
+	Can I gaze into your eyes <br />
+	and be lost in the beauty that you possess<br />
+	Before I realize that
+</p>
+<p>
+	All I wished for is just a dream<br />
+	You're all I hoped you'd be<br />
+	But all the things you are means nothing 'cause<br />
+	Love's not make-believe.
+</p>
 </div>
 
 <div class="slide">
