--- a/index.html
+++ b/index.html
@@ -207,14 +207,14 @@ Calendar
 <!-- 
 IF YOU ARE TYPING:
 To write a title, use '<h2>' at the beginning of the first word and '</h2>' at the end of the last word.
-To write the poet's name, use '<p style="#d5d5d5;">' at the beginning of the name and '</p>' at the end of the name. 
+To write the poet's name, use '<p style="#a9a9a9;">' at the beginning of the name and '</p>' at the end of the name. 
 To have a sentence go to the next line, use '<br />' after sentence. This means to break the word to the next line. 
 To create a paragraph, use '<p>' at the beginning of the first word and '</p>' at the end of the last word.
 --> 
 
 <div class="slide">  
 <h2>The Rain is A Handsome Animal</h2>
-<p style="color:#d5d5d5;">e.e. cummings</p>
+<p style="color:#a9a9a9;">e.e. cummings</p>
 <p>
 	Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
 	Along the river trees are letting go scarcely and silently wisps,parcels<br />
@@ -233,7 +233,7 @@ To create a paragraph, use '<p>' at the beginning of the first word and '</p>' a
 </div>
 
 <div class="slide">
-<p style="color:#d5d5d5;">Devonte Fuller*</p>
+<p style="color:#a9a9a9;">Devonte Fuller*</p>
 <p>
 	Can I let you into my world<br/>
 	So you can see all that I see?<br />
