--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <div class="modalinfo">
 <div id="about">
 <h1>What is Poetry Club?</h1>
-<p>	Poetry Club is an open family that welcomes all people. We strive to not only help each other improve on analyzing, comprehending, and interpreting poetry, but we also encourage self-expression by providing a comfortable and friendly environment. By reading, writing, sharing, and exploring the vast realm of poetics, Poetry Club enhances everyday english skills and allows for creative ways to explain all aspects of life.
+<p>	Poetry Club is a family that welcomes all people. We strive to not only help each other improve on analyzing, comprehending, and interpreting poetry, but we also encourage self-expression by providing a comfortable and friendly environment. By reading, writing, sharing, and exploring the vast realm of poetics, Poetry Club enhances everyday english skills and allows for creative ways to explain all aspects of life.
 </p>
 <p>
 	We meet every Thursdays in room A218!
