--- a/index.html
+++ b/index.html
@@ -76,11 +76,10 @@
 		<td><h2>October</h2></td>
 		<td>
 			<span>
-				No Events
+				10th: No Meeting<br />
 			</span>
 		</td>
 	</tr>
-	</div>
 	<tr class="month2">
 		<td><h2>November</h2></td>
 		<td>
@@ -88,7 +87,6 @@
 				3rd: Poetry Slam<br />
 				17th: No Meeting
 			</span>
-		</td>
 		</td>
 	</tr>
 	<tr class="month2">
@@ -140,7 +138,6 @@
 		</td>
 	</tr>
 </table>
-</div>
 </div>
 </div>
 </div>
@@ -198,6 +195,7 @@ Calendar
 <!-- Slider -->
 
 <div class="slider">
+	
 <div class="arrow-left"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-left-128.png" width="90%"/></div>
 
 <div id="slides">
@@ -239,7 +237,6 @@ To create a paragraph, use '<p>' at the beginning of the first word and '</p>' a
 </div>
 
 <div class="arrow-right"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-right-128.png" width="90%"/></div>
-</div>
 </main>
 
 <!-- Footer -->
