--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>EHS Poetry Club</title>
 <link rel="shortcut icon" href="https://raw.githubusercontent.com/ehspoetryclub/ehspoetryclub.github.io/master/favicon.ico" type="image/x-icon" />
 <meta name=viewport content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=yes">
-<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT|Source+Sans+Pro" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css?family=Old+Standard+TT|Karla" rel="stylesheet">
 <link rel="stylesheet" href="poetryclub.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 <script src="poetryclub.js"></script> 
@@ -12,251 +12,78 @@
 
 
 <body id="pageload">
-
-<div class="modal" id="modal">
-<div id="modalcontainer">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
-<div class="modalinfo">
-<div id="about">
-<h1>What is Poetry Club?</h1>
-<p>	Poetry Club is a family that welcomes all people. We strive to not only help each other improve on analyzing, comprehending, and interpreting poetry, but we also encourage self-expression by providing a comfortable and friendly environment. By reading, writing, sharing, and exploring the vast realm of poetics, Poetry Club enhances everyday english skills and allows for creative ways to explain all aspects of life.
+<div class="container-fluid">
+<header>
+<nav>
+<a href="/">Home</a>
+<a href="https://ehspoetryclub.github.io/poems">Poems</a>
+<a href="https://ehslitmag.github.io">Submit</a>
+<a id="more">Poetry Websites</a>
+<a href="http://www.ecusd7.org/ehs/">EHS</a>
+<div id="moreinfo">
+<a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
+<a href="https://www.poets.org/">poets.org</a>
+<a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry</a>
+</div>
+</nav>
+<div id="title">EHS Poetry Club</div>
+</header>
+<main>
+<section id="about">
+<h1>What is Poetry Club? <l></l></h1>
+<p>
+	Poetry Club is a family that welcomes all people. We strive to not only help each other improve on analyzing, comprehending, and interpreting poetry, but we also encourage self-expression by providing a comfortable and friendly environment. By reading, writing, sharing, and exploring the vast realm of poetics, Poetry Club enhances everyday english skills and allows for creative ways to explain all aspects of life.
 </p>
 <p>
 	We meet every Thursdays in room A218!
 </p>
-</div>
-</div>
-</div>
-</div>
-
-<div class="modal" id="modal2">
-<div id="modalcontainer2">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
-<div class="modalinfo">
-<h1>Links & Contact</h1>
-<table id="contact">
-	<tr id="contactmain">
-		<td>Email</td> 
-		<td><a href="mailto:ehspoetryclub@gmail.com">ehspoetryclub@gmail.com</a></td> 
-	</tr>
-</table>
-<ul>
-	<li><a href="https://www.poets.org">Academy of American Poets</a></li>
-	<li><a href="https://www.poetryfoundation.org">Poetry Foundation</a></li>
-	<li><a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry on Youtube</a></li>
-</ul>
-<h4>Submit your poems to the <a href="https://ehslitmag.github.io">EHS Lit Mag</a>!</h4>
-</div>
-</div>
-</div>
-
-<div class="modal" id="modal3">
-<div id="modalcontainer3">
-<div class="close"><img src="https://static.dpaw.wa.gov.au/static/libs/ionicons/1.2/src/icon-close.svg" width="15px" /></div>
-<div class="modalinfo">
-<table id="calendar">
-	<tr class="month1">
-		<td><h2>August</h2></td>
-		<td>
-			<span>
-				25th: First Officers Meeting
-			</span>
-		</td>
-	</tr>
-	<tr class="month1">
-		<td><h2>September</h2></td>
-		<td>
-			<span>
-				1st: First Poetry Club Meeting<br />
-				22th: No Meeting
-			</span>
-		</td>
-	</tr>
-	<tr class="month1">
-		<td><h2>October</h2></td>
-		<td>
-			<span>
-				10th: No Meeting<br />
-			</span>
-		</td>
-	</tr>
-	<tr class="month2">
-		<td><h2>November</h2></td>
-		<td>
-			<span>
-				3rd: Poetry Slam<br />
-				17th: No Meeting
-			</span>
-		</td>
-	</tr>
-	<tr class="month2">
-		<td><h2>December</h2></td>
-		<td>
-			<span>
-				No Events
-			</span>
-		</td>
-	</tr>
-	<tr class="month2">
-		<td><h2>January</h2></td>
-		<td>
-			<span>
-				26th: No Meeting
-			</span>
-		</td>
-	</tr>
-	<tr class="month3">
-		<td><h2>February</h2></td>
-		<td>
-			<span>
-				No Events
-			</span>
-		</td>
-	</tr>
-	<tr class="month3">
-		<td><h2>March</h2></td>
-	 	<td>
-	 		<span>
-	 			16th: No Meeting
-	 		</span>
-	 	</td>
-	</tr>
-	<tr class="month3">
-		<td><h2>April</h2></td>
-		<td>
-			<span>
-				20th: No Meeting
-			</span>
-		</td>
-	</tr>
-	<tr class="month4">
-		<td><h2>May</h2></td>
-		<td>
-			<span>
-				11th: No Meeting
-			</span>
-		</td>
-	</tr>
-</table>
-</div>
-</div>
-</div>
-
-
-<!-- Main (> 769px devices) --->
-
-<div class="container-fluid">
-<header>
-<div id="title">EHS Poetry Club</div>
-<nav>
-<a href="http://www.ecusd7.org/ehs/">Return to EHS</a>
-<a href="http://dmerc66.wix.com/main">Return to Index</a>
-</nav>
-</header>
-
-<!-- Main -->
-<main>
-<!-- Panels --->
-<div class="panels">
-<div class="panel" id="panel">
-About
-</div>
-
-<section id="about2">
-<!-- Clone -->
 </section>
-
-
-<div class="panel" id="panel2">
-Links & Contact
-</div>
-
-<section id="contact2">
-<h1>Contact</h1>
-<table id="contact2">
-<!-- Clone -->
-</table>
-</section>
-
-
-<div class="panel" id="panel3">
-Calendar
-</div>
-
-<section id="calendar2">
-<h1>Calendar</h1>
-<table id="calendar2">
-<!-- Clone -->
-</table>
-</section>
-
-</div>
-
-<!-- Slider -->
-
-<div class="slider">
-	
-<div class="arrow-left"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-left-128.png" width="90%"/></div>
-
-<div id="slides">
-<div class="slide active-slide">
+<section id="calendar">
+<h1>Upcoming Events <l></l></h1>
 <p>
-<h1>Poems</h1>
-<span style="text-transform:uppercase;font-size:1em;letter-spacing:2px;font-weight:bold">Curated and By the Poetry Club</span>
+<h2>January</h2>
+<span>26th</span> No meeting 
 </p>
-</div>
-
-<!-- 
-IF YOU ARE TYPING:
-To write a title, use '<h2>' at the beginning of the first word and '</h2>' at the end of the last word.
-To write the poet's name, use '<p style="#a9a9a9;">' at the beginning of the name and '</p>' at the end of the name. 
-To have a sentence go to the next line, use '<br />' after sentence. This means to break the word to the next line. 
-To create a paragraph, use '<p>' at the beginning of the first word and '</p>' at the end of the last word.
---> 
-
-<div class="slide">  
-<h2>The Rain is A Handsome Animal</h2>
-<p style="color:#a9a9a9;">e.e. cummings</p>
 <p>
-	Whereupon i seize a train and suddenly i am in Paris toward night,in Mai.<br />
-	Along the river trees are letting go scarcely and silently wisps,parcels<br />
-	of incense,which drop floatingly through a vista of talking moving people;<br />
-	timidly which caress hats and shoulders,wrists and dresses;which unspeakingly<br />
-	alight upon the laughter of men and children,girls and soldiers.<br />
-	In twilight these ridiculous and exquisite things descendingly move among<br />
-	through twilight to The Gingerbread Fair.   I am alive,I go along too, I <br />
-	slowly go up the vista among the hats and soldiers,among the smiles and <br />
-	neckties,the kisses and old men,wrists and laughter.   We all together irrevocably<br />
-	are moving,are moving slowly and gaily moving.  Intricately the<br />
-	shoulders of us and our hats timidly are touched by a million absurd<br />
-	hinting things;by wisps and by women and by laughter and by forever;while,<br />
-	upon our minds,fasten beautifully and close the warm tentacles of evening.
+<h2>February</h2>
+<span>TBD</span> Selling flowers and poems with Tri-UM
 </p>
-</div>
-
-</div>
-
-<div class="arrow-right"><img src="https://cdn4.iconfinder.com/data/icons/ionicons/512/icon-ios7-arrow-right-128.png" width="90%"/></div>
+<p>
+<h2>March</h2>
+<span>16th</span> No meeting
+</p>
+<p>
+<h2>April</h2>
+<span>20th</span> No meeting <br></br>
+<span>21st</span> Poetry Slam at the Edwardsville Public Library at 7:00pm - 8:00pm
+</p>
+<p>
+<h2>May</h2>
+<span>11th</span> No meeting
+</p>
+</section>
 </main>
 
 <!-- Footer -->
 <footer>
 <p><a href="https://twitter.com/ehspoetryclub/">
-<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="50px" height="50px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="40px" height="40px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 <path fill="#444444" d="M 32 6.1 c -1.2 0.5 -2.4 0.9 -3.8 1 c 1.4 -0.8 2.4 -2.1 2.9 -3.6 c -1.3 0.8 -2.7 1.3 -4.2 1.6 C 25.7 3.8 24 3 22.2 3 c -3.6 0 -6.6 2.9 -6.6 6.6 c 0 0.5 0.1 1 0.2 1.5 C 10.3 10.8 5.5 8.2 2.2 4.2 c -0.6 1 -0.9 2.1 -0.9 3.3 c 0 2.3 1.2 4.3 2.9 5.5 c -1.1 0 -2.1 -0.3 -3 -0.8 c 0 0 0 0.1 0 0.1 c 0 3.2 2.3 5.8 5.3 6.4 c -0.6 0.1 -1.1 0.2 -1.7 0.2 c -0.4 0 -0.8 0 -1.2 -0.1 c 0.8 2.6 3.3 4.5 6.1 4.6 c -2.2 1.8 -5.1 2.8 -8.2 2.8 c -0.5 0 -1.1 0 -1.6 -0.1 C 2.9 27.9 6.4 29 10.1 29 c 12.1 0 18.7 -10 18.7 -18.7 c 0 -0.3 0 -0.6 0 -0.8 C 30 8.5 31.1 7.4 32 6.1 Z" />
 </svg>
 </a>
 <a href="https://www.instagram.com/ehspoetry/">
-<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="50px" height="50px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
+<svg xmlns="http://www.w3.org/2000/svg" id="Layer_1" enable-background="new 0 0 32 32" viewBox="0 0 32 32" x="0px" y="0px" width="40px" height="40px" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:space="preserve" version="1.1">
 <path fill="#444444" d="M 28.2 0 H 3.8 C 1.7 0 0 1.7 0 3.8 v 24.4 C 0 30.3 1.7 32 3.8 32 h 24.4 c 2.1 0 3.8 -1.7 3.8 -3.8 V 3.8 C 32 1.7 30.3 0 28.2 0 Z M 24 4 h 3 c 0.6 0 1 0.4 1 1 v 3 c 0 0.6 -0.4 1 -1 1 h -3 c -0.6 0 -1 -0.4 -1 -1 V 5 C 23 4.4 23.4 4 24 4 Z M 16 9.9 c 3.4 0 6.2 2.7 6.2 6.1 c 0 3.4 -2.8 6.1 -6.2 6.1 c -3.4 0 -6.2 -2.7 -6.2 -6.1 C 9.9 12.6 12.6 9.9 16 9.9 Z M 28 29 H 4 c -0.6 0 -1 -0.4 -1 -1 V 13 h 4 c -0.5 0.8 -0.7 2.1 -0.7 3 c 0 5.4 4.4 9.7 9.7 9.7 c 5.4 0 9.7 -4.4 9.7 -9.7 c 0 -0.9 -0.1 -2.3 -0.8 -3 h 4 v 15 C 29 28.6 28.6 29 28 29 Z" />
 </svg>
 </a>
 </p>
 
 <p>Sponsored by Mrs. Mercer</p>
+<p>ehspoetry@gmail.com</p>
 <p>Website by Robin Luo</p>
-<p>(2016)</p>
+<p>(2017)</p>
 </footer>
+</div>
 </div>
 </body>
 
