--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <p>
 <h2>April</h2>
 <span>20th</span> No meeting <br></br>
-<span>21st</span> Poetry Slam at the Edwardsville Public Library at 7:00pm - 8:00pm
+<span>21st</span> Poetry Slam at the Edwardsville Public Library 7-8pm
 </p>
 <p>
 <h2>May</h2>
