--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <a href="/">Home</a>
 <a href="https://ehspoetryclub.github.io/poems">Poems</a>
 <a href="https://ehslitmag.github.io">Submit</a>
-<a id="more">Poetry Websites</a>
+<a id="more">Websites</a>
 <a href="http://www.ecusd7.org/ehs/">EHS</a>
 <div id="moreinfo">
 <a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
