--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry</a>
 </div>
 </nav>
-<div id="title">EHS Poetry Club</div>
+<div id="title"><a href="/">EHS Poetry Club</a></div>
 </header>
 <main>
 <section id="about">
@@ -41,7 +41,7 @@ We meet every Thursdays in room A218!
 <section id="calendar">
 <h1>Upcoming Events <l></l></h1>
 <p>
-<h2>January</h2>
+ <h2>January</h2>
 <span>26th</span> No meeting 
 </p>	
 <p>
