--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 </nav>
 <div id="title"><a href="/">EHS Poetry Club</a></div>
 </header>
+ 
 <main>
 <section id="about">
 <h1>What is Poetry Club? <l></l></h1>
@@ -41,7 +42,7 @@ We meet every Thursdays in room A218!
 <section id="calendar">
 <h1>Upcoming Events <l></l></h1>
 <p>
- <h2>January</h2>
+<h2>January</h2>
 <span>26th</span> No meeting 
 </p>	
 <p>
@@ -55,7 +56,7 @@ We meet every Thursdays in room A218!
 <p>
 <h2>April</h2>
 <span>20th</span> No meeting <br></br>
-<span>21st</span> Poetry Slam at the Edwardsville Public Library 7-8pm
+<span>27th</span> Poetry Slam at the Edwardsville Public Library 7-8pm
 </p>
 <p>
 <h2>May</h2>
