--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <a href="https://ehspoetryclub.github.io/poems">Poems</a>
 <a href="https://ehslitmag.github.io">Submit</a>
 <a id="more">Websites</a>
-<a id="mobhide" href="http://www.ecusd7.org/ehs/">EHS</a>
+<a class="last" href="http://www.ecusd7.org/ehs/">EHS</a>
 <div id="moreinfo">
 <a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
 <a href="https://www.poets.org/">poets.org</a>
