--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <nav>
 <a href="/">Home</a>
 <a href="https://ehspoetryclub.github.io/poems">Poems</a>
-<a href="https://ehslitmag.github.io">Submit</a>
+<a class="mlast" href="https://ehslitmag.github.io">Submit</a>
 <a id="more">Websites</a>
 <a class="last" href="http://www.ecusd7.org/ehs/">EHS</a>
 <div id="moreinfo">
