--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <header>
 <nav>
 <a href="/">Home</a>
-<a href="https://ehspoetryclub.github.io/poems.html">Poems</a>
+<a href="https://ehspoetryclub.github.io/poems">Poems</a>
 <a class="mlast" href="https://ehslitmag.github.io">Submit</a>
 <a id="more">Websites</a>
 <a class="last" href="http://www.ecusd7.org/ehs/">EHS</a>
