--- a/poems.html
+++ b/poems.html
@@ -30,7 +30,7 @@
 </header>
  
 <main>
-<section id="poems">
+<section id="poemsbyus">
 <h1>By Members <l></l></h1>
 <h2>Almost Maine, Almost Love</h2>
 <h3>Devonte Fuller</h3>
@@ -58,7 +58,9 @@ That I didn't give you every piece of me?<br>
 I've returned you all of yours; it barely fit within my doors<br>
 Give back my love I gave to you so I have some for me.
 </p>
+</section>
 
+<section id="poemsbypoets">
 <h1>By Poets <l></l></h1>
 <h2>Monet Refuses the Operation</h2>
 <h3>Lisel Mueller</h3>
@@ -110,7 +112,6 @@ how heaven pulls earth into its arms<br>
 and how infinitely the heart expands<br>
 to claim this world, blue vapor without end.
 </p>
-
 </section>
 </main>
 
