--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 <a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
 <a href="https://www.poets.org/">poets.org</a>
 <a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry</a>
+<a href="http://www.poetryoutloud.org/">Poetry Out Loud</a>
 </div>
 </nav>
 <div id="title"><a href="/">EHS Poetry Club</a></div>
