--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <nav>
 <a href="/">Home</a>
 <a href="https://ehspoetryclub.github.io/poems">Poems</a>
-<a class="mlast" href="https://ehslitmag.github.io">Submit</a>
-<a id="more">Websites</a>
+<a href="https://ehslitmag.github.io">Submit</a>
+<a class="mlast" id="more">Websites</a>
 <a class="last" href="http://www.ecusd7.org/ehs/">EHS</a>
 <div id="moreinfo">
 <a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
