--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <nav>
 <a href="/">Home</a>
 <a href="https://ehspoetryclub.github.io/poems">Poems</a>
-<a href="https://ehslitmag.github.io">Submit</a>
-<a class="mlast" id="more">Websites</a>
+<a class="mlast" href="https://ehslitmag.github.io">Submit</a>
+<a id="more">Websites</a>
 <a class="last" href="http://www.ecusd7.org/ehs/">EHS</a>
 <div id="moreinfo">
 <a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
@@ -84,8 +84,13 @@ We meet every Thursdays in room A218!
 <p>ehspoetry@gmail.com</p>
 <p>Website by Robin Luo</p>
 <p>(2017)</p>
-</footer>
+<div class="mshow">
+<a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
+<a href="https://www.poets.org/">poets.org</a>
+<a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry</a>
+<a href="http://www.poetryoutloud.org/">Poetry Out Loud</a>
 </div>
+</footer>
 </div>
 </body>
 
