--- a/index.html
+++ b/index.html
@@ -85,6 +85,7 @@ We meet every Thursdays in room A218!
 <p>Website by Robin Luo</p>
 <p>(2017)</p>
 <div class="mshow">
+Poetry Resources<br>
 <a href="https://www.poetryfoundation.org/">Poetry Foundation</a>
 <a href="https://www.poets.org/">poets.org</a>
 <a href="https://www.youtube.com/user/ButtonPoetry">Button Poetry</a>
