--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ We meet every Thursdays in room A218!
 </p>	
 <p>
 <h2>February</h2>
-<span>TBD</span> Selling flowers and poems with Tri-UM
+<span>TBD</span> Selling flowers and poems with Tri-M
 </p>
 <p>
 <h2>March</h2>
