--- a/poems.html
+++ b/poems.html
@@ -59,6 +59,30 @@ That I didn't give you every piece of me?<br>
 I've returned you all of yours; it barely fit within my doors<br>
 Give back my love I gave to you so I have some for me.
 </p>
+<h2>6/25/2016</h2>
+<p>I fell in love with a girl. She wore dark, heavy makeup and whenever she smoked or drank, she'd
+ leave a lipstick stain on the cigarette or on the rim of her cup. Her lips were cherry red, or wine  
+ colored, or the same pink flush as her cheeks and sometimes I imagined she got her lips to be so red 
+ because she kissed the sunsets purple and stole the fires of the sun. But then I saw how shaky her 
+ hands were when she applied lipstick on a dirty bathroom mirror, eyeliner streaks on her face, a purse 
+ full of makeup remover and concealer to hide the imperfections. Chants of "They won't know unless you tell
+ them. Put on a smile and pretend. It will be okay."</p>
+ <p>I fell in love with a girl. She talks in her sleep about bright, shiny objects that are sharp as a 
+ knife and sting like a cut. She breaks her teeth on jagged glass and she munches on so many pills because
+ the doctors are tired of trying to figure her out, so they prescribe her medicine to cure the anxiety and
+ the migraines and the depression. Around the third refill, the pharmacist warned her to not pop them like
+ candy. They swapped some of them with placeboes and thought she wouldn't notice. That's when the paranoia
+ started up and the nightmares and the long talks about her bright shiny objects. She tells me not to worry,
+ she'll be okay.</p>
+ <p>I fell in love with a girl. We fought tooth and nail against each her relapses. She was the push into
+ further destruction and I was the pull back into reality. She screamed a million curses at me and damned
+ me to every hell she knew while she spit bile at me on the bathroom floor while I held her over the toliet.
+ She clawed at me, like an animal, swiping across my face and cutting open my cheek. I told her to spit into
+ the bowl and watched as she spit up her lipstick and her pretty words and when she's done throwing up, I make
+ her sit in the bath tub while I scrub at her skin. If I close my eyes, I see her flying off with the ghouls
+ and the ghosts to wreck the heavens, doing her bidding as she pleases. She'll throw up twice again before
+ lying awake because the pain and the guilt keep her up. My hands will shake against her body as I try to tame
+ the beast inside of her head. My hands will shake as I whisper over and over, "We will be okay."</p>
 </section>
 
 <section id="poemsbypoets">
