--- a/poems.html
+++ b/poems.html
@@ -142,7 +142,7 @@ to claim this world, blue vapor without end.
 <h2>OCD</h2>
 <h3>Neil Hilborn</h3>
 <p>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/vnKZ4pdSU-s" frameborder="0" allowfullscreen></iframe>
+<iframe width="100%" height="200%" src="https://www.youtube.com/embed/vnKZ4pdSU-s" frameborder="0" allowfullscreen></iframe>
 </p>
 </section>
 </main>
