--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ We meet every Thursdays in room A218!
 </p>	
 <p>
 <h2>February</h2>
-<span>TBD</span> Selling flowers and poems with Tri-M
+<span>6th</span> Selling flowers and poems with Tri-M
 </p>
 <p>
 <h2>March</h2>
@@ -56,7 +56,7 @@ We meet every Thursdays in room A218!
 </p>
 <p>
 <h2>April</h2>
-<span>20th</span> No meeting <br></br>
+<span>20th</span> No meeting <br/>
 <span>27th</span> Poetry Slam at the Edwardsville Public Library 7-8pm
 </p>
 <p>
