--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ h1, h2, h3, h4, h5 {
 }
 
 nav {
-	padding-top:2%;
+	padding-top:4%;
 	text-transform:uppercase;
 }
 
@@ -123,7 +123,7 @@ footer svg {
  <!-- to edit description, edit inside this -->
 </p>
 </section>
-<section id="calendar">
+<section id="events">
 <h1>What's going on?</h1>
 <a class="twitter-timeline" data-width="100%" data-height="750" href="https://twitter.com/ehspoetryclub">Tweets by ehspoetryclub</a> <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 </section>
